--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <link rel="icon" type="image/webp" href="/scrum-poker.webp" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Scrum Poker</title>
+    <!-- Preconnect to improve performance -->
+    <link rel="preconnect" href="https://fonts.googleapis.com" crossorigin />
   </head>
   <body>
     <div id="root"></div>
