Add SEO metadata and robots.txt for better discoverability

--- a/index.html
+++ b/index.html
@@ -4,7 +4,33 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/webp" href="/scrum-poker.webp" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Scrum Poker</title>
+
+    <!-- Primary Meta Tags -->
+    <title>Scrum Poker - Free Online Planning Poker Tool for Agile Teams</title>
+    <meta name="title" content="Scrum Poker - Free Online Planning Poker Tool for Agile Teams" />
+    <meta name="description" content="Free real-time Scrum Poker app for agile sprint planning. Anonymous Fibonacci voting, instant reveals, flying emoji reactions, and spectator mode. No sign-up required." />
+    <meta name="keywords" content="scrum poker, planning poker, agile estimation, sprint planning, fibonacci voting, story points, agile tool, scrum tool, free scrum poker, online planning poker" />
+    <meta name="author" content="Mojo Studio" />
+    <meta name="robots" content="index, follow" />
+
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://scrum.mojostudio.io/" />
+    <meta property="og:title" content="Scrum Poker - Free Online Planning Poker Tool" />
+    <meta property="og:description" content="Real-time collaborative estimation tool for agile teams. Anonymous voting, instant reveals, and flying emoji reactions. No sign-up required." />
+    <meta property="og:image" content="https://scrum.mojostudio.io/scrum-poker.webp" />
+    <meta property="og:site_name" content="Scrum Poker" />
+
+    <!-- Twitter -->
+    <meta property="twitter:card" content="summary_large_image" />
+    <meta property="twitter:url" content="https://scrum.mojostudio.io/" />
+    <meta property="twitter:title" content="Scrum Poker - Free Online Planning Poker Tool" />
+    <meta property="twitter:description" content="Real-time collaborative estimation tool for agile teams. Anonymous voting, instant reveals, and flying emoji reactions." />
+    <meta property="twitter:image" content="https://scrum.mojostudio.io/scrum-poker.webp" />
+
+    <!-- Canonical URL -->
+    <link rel="canonical" href="https://scrum.mojostudio.io/" />
+
     <!-- Preconnect to improve performance -->
     <link rel="preconnect" href="https://fonts.googleapis.com" crossorigin />
   </head>
